structure: work in progress

--- a/index.html
+++ b/index.html
@@ -9,5 +9,40 @@
 </head>
 <body>
     
+    <main class="main">
+        <nav class="sidebar">
+            <ul>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>
+        </nav>
+
+        <div class="main-content">
+            <div class="main-header">
+                <a href="">Effettua l'upgrade</a>
+            </div>
+        </div>
+    </main>
+
+    <footer class="footer">
+        <div class="col left">
+            colonna sinistra
+        </div>
+        <div class="col center">
+            colonna centrale
+        </div>
+        <div class="col right">
+            colonna destra
+        </div>
+    </footer>
+
 </body>
 </html>
