--- a/index.html
+++ b/index.html
@@ -5,29 +5,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify</title>
+
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- STYLE -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     
     <main class="main">
         <nav class="sidebar">
-            <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+            <ul class="menu-list">
+                <li class="logo-container">
+                    <a href="">
+                        <img src="img/logo.svg" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <i class="fas fa-home"></i>
+                        <span>Home</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <i class="fas fa-search"></i>
+                        <span>Cerca</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <i class="fas fa-bars"></i>
+                        <span>La tua libreria</span>
+                    </a>
+                </li>
+            </ul>
+
+            <ul class="playlist">
+                <li>
+                    <h3>Playlist</h3>
+                </li>
+                <li>
+                    <a href="">
+                        <i class="fas fa-plus"></i>
+                        <span>Crea Playlist</span>
+                    </a>
+                </li>
+                <li><a href="">Nome Playlist</a></li>
+                <li><a href="">Nome Playlist</a></li>
+                <li><a href="">Nome Playlist</a></li>
+                <li><a href="">Nome Playlist</a></li>
+                <li><a href="">Nome Playlist</a></li>
+                <li><a href="">Nome Playlist</a></li>
             </ul>
         </nav>
 
         <div class="main-content">
             <div class="main-header">
-                <a href="">Effettua l'upgrade</a>
+                <a href="">EFFETTUA L'UPGRADE</a>
             </div>
         </div>
     </main>
