--- a/index.html
+++ b/index.html
@@ -19,49 +19,66 @@
     
     <main class="main">
         <nav class="sidebar">
-            <ul class="menu-list">
-                <li class="logo-container">
-                    <a href="">
-                        <img src="img/logo.svg" alt="">
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <i class="fas fa-home"></i>
-                        <span>Home</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <i class="fas fa-search"></i>
-                        <span>Cerca</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <i class="fas fa-bars"></i>
-                        <span>La tua libreria</span>
-                    </a>
-                </li>
-            </ul>
+            <div class="menu-list">
+                <ul>
+                    <li class="logo-container">
+                        <a href="">
+                            <img src="img/logo.svg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="fas fa-home"></i>
+                            <span>Home</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="fas fa-search"></i>
+                            <span>Cerca</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="fas fa-bars"></i>
+                            <span>La tua libreria</span>
+                        </a>
+                    </li>
+                </ul>
 
-            <ul class="playlist">
-                <li>
-                    <h3>Playlist</h3>
-                </li>
-                <li>
+                <ul class="playlist">
+                    <li>
+                        <h3>Playlist</h3>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="fas fa-plus"></i>
+                            <span>Crea Playlist</span>
+                        </a>
+                    </li>
+                    <li><a href="">Nome Playlist</a></li>
+                    <li><a href="">Nome Playlist</a></li>
+                    <li><a href="">Nome Playlist</a></li>
+                    <li><a href="">Nome Playlist</a></li>
+                    <li><a href="">Nome Playlist</a></li>
+                    <li><a href="">Nome Playlist</a></li>
+                </ul>
+            </div>
+
+            <div class="menu-footer">
+                <div class="container">
                     <a href="">
-                        <i class="fas fa-plus"></i>
-                        <span>Crea Playlist</span>
+                        <i class="far fa-arrow-alt-circle-down"></i>
+                        <span>Installa App</span>
                     </a>
-                </li>
-                <li><a href="">Nome Playlist</a></li>
-                <li><a href="">Nome Playlist</a></li>
-                <li><a href="">Nome Playlist</a></li>
-                <li><a href="">Nome Playlist</a></li>
-                <li><a href="">Nome Playlist</a></li>
-                <li><a href="">Nome Playlist</a></li>
-            </ul>
+                </div>
+                <div class="account">
+                    <a href="">
+                        <i class="far fa-user-circle"></i>
+                        <span>John Doe</span>
+                    </a>
+                </div>
+            </div>
         </nav>
 
         <div class="main-content">
