--- a/index.html
+++ b/index.html
@@ -85,6 +85,78 @@
             <div class="main-header">
                 <a href="">EFFETTUA L'UPGRADE</a>
             </div>
+            <div class="cards-container">
+                <div class="menu">
+                    <ul>
+                        <li><a href="">IN EVIDENZA</a></li>
+                        <li><a href="">PODCAST</a></li>
+                        <li><a href="">CLASSIFICHE</a></li>
+                        <li><a href="">GENERI E MOOD</a></li>
+                        <li><a href="">NUOVE USCITE</a></li>
+                        <li><a href="">SCOPRI</a></li>
+                    </ul>
+                </div>
+                <div class="title">
+                    <h2>Recently played</h2>
+                </div>
+                <div class="row">
+                    <div class="card">
+                        <div class="img-container">
+                            <img src="img/metal_lifting.jpg" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Heavy Metal</h3>
+                        </div>
+                        <div class="sub-title">Subtitle</div>
+                    </div>
+                    <div class="card">
+                        <div class="img-container">
+                            <img src="img/metal_lifting.jpg" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Heavy Metal</h3>
+                        </div>
+                        <div class="sub-title">Subtitle</div>
+                    </div>
+                    <div class="card">
+                        <div class="img-container">
+                            <img src="img/metal_lifting.jpg" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Heavy Metal</h3>
+                        </div>
+                        <div class="sub-title">Subtitle</div>
+                    </div>
+                    <div class="card">
+                        <div class="img-container">
+                            <img src="img/metal_lifting.jpg" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Heavy Metal</h3>
+                        </div>
+                        <div class="sub-title">Subtitle</div>
+                    </div>
+                    <div class="card">
+                        <div class="img-container">
+                            <img src="img/metal_lifting.jpg" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Heavy Metal</h3>
+                        </div>
+                        <div class="sub-title">Subtitle</div>
+                    </div>
+                    <div class="card">
+                        <div class="img-container">
+                            <img src="img/metal_lifting.jpg" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Heavy Metal</h3>
+                        </div>
+                        <div class="sub-title">Subtitle</div>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </main>
 
