--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                         <li><a href="">SCOPRI</a></li>
                     </ul>
                 </div>
+                <!-- FIRST ROW -->
                 <div class="title">
                     <h2>Recently played</h2>
                 </div>
@@ -111,51 +112,108 @@
                     </div>
                     <div class="card">
                         <div class="img-container">
-                            <img src="img/metal_lifting.jpg" alt="">
+                            <img src="img/stranger.jpeg" alt="">
                         </div>
                         <div class="title">
-                            <h3>Heavy Metal</h3>
+                            <h3>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
+                        </div>
+                        <div class="sub-title">
+                            <span>Kyle Dixon & Michael Stein</span>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="img-container">
+                            <img src="img/aquietplace.jpeg" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>A quiet place</h3>
                         </div>
                         <div class="sub-title">Subtitle</div>
                     </div>
                     <div class="card">
                         <div class="img-container">
-                            <img src="img/metal_lifting.jpg" alt="">
+                            <img src="img/split.jpeg" alt="">
                         </div>
                         <div class="title">
-                            <h3>Heavy Metal</h3>
+                            <h3>Split</h3>
                         </div>
                         <div class="sub-title">Subtitle</div>
                     </div>
                     <div class="card">
                         <div class="img-container">
-                            <img src="img/metal_lifting.jpg" alt="">
+                            <img src="img/cure.jpeg" alt="">
                         </div>
                         <div class="title">
-                            <h3>Heavy Metal</h3>
+                            <h3>A cure for wellness</h3>
                         </div>
                         <div class="sub-title">Subtitle</div>
                     </div>
                     <div class="card">
                         <div class="img-container">
-                            <img src="img/metal_lifting.jpg" alt="">
+                            <img src="img/sinister.jpeg" alt="">
                         </div>
                         <div class="title">
-                            <h3>Heavy Metal</h3>
-                        </div>
-                        <div class="sub-title">Subtitle</div>
-                    </div>
-                    <div class="card">
-                        <div class="img-container">
-                            <img src="img/metal_lifting.jpg" alt="">
-                        </div>
-                        <div class="title">
-                            <h3>Heavy Metal</h3>
+                            <h3>Sinister</h3>
                         </div>
                         <div class="sub-title">Subtitle</div>
                     </div>
                 </div>
-
+                <!-- /FIRST ROW -->
+                <!-- SECOND ROW -->
+                <div class="title">
+                    <h2>Creato per John Doe</h2>
+                    <p>Più  ascolti, più accurati saranno i suggerimenti</p>
+                </div>
+                <div class="row">
+                    <div class="card">
+                        <div class="img-container">
+                            <img src="img/radar.jpeg" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Heavy Metal</h3>
+                        </div>
+                        <div class="sub-title">Subtitle</div>
+                    </div>
+                    <div class="card">
+                        <div class="img-container">
+                            <img src="img/mixdaily.jpeg" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
+                        </div>
+                        <div class="sub-title">
+                            <span>Kyle Dixon & Michael Stein</span>
+                        </div>
+                    </div>
+                </div>
+                <!-- /SECOND ROW -->
+                <!-- THIRD ROW -->
+                <div class="title">
+                    <h2>Artisti più popolari</h2>
+                    <p>Più  ascolti, più accurati saranno i suggerimenti</p>
+                </div>
+                <div class="row">
+                    <div class="card">
+                        <div class="img-container radius">
+                            <img src="img/youg.jpeg" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Heavy Metal</h3>
+                        </div>
+                        <div class="sub-title">Subtitle</div>
+                    </div>
+                    <div class="card">
+                        <div class="img-container radius">
+                            <img src="img/einaudi.jpeg" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
+                        </div>
+                        <div class="sub-title">
+                            <span>Kyle Dixon & Michael Stein</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
