--- a/index.html
+++ b/index.html
@@ -220,13 +220,39 @@
 
     <footer class="footer">
         <div class="col left">
-            colonna sinistra
+            <div class="img-container">
+                <img src="img/sinister.jpeg" alt="">
+            </div>
+            <div class="title">
+                <h4>Sinister</h4>
+                <span>Brano Nome</span>
+            </div>
+            <div class="icons-container">
+                <i class="far fa-heart"></i>
+                <i class="far fa-folder"></i>
+            </div>
         </div>
-        <div class="col center">
-            colonna centrale
+        <div class="col-center">
+            <div class="icons-container">
+                <a href=""><i class="fas fa-random"></i></a>
+                <a href=""><i class="fas fa-step-backward"></i></a>
+                <a href=""><i class="far fa-play-circle"></i></a>
+                <a href=""><i class="fas fa-step-forward"></i></a>
+                <a href=""><i class="fas fa-undo"></i></a>
+            </div>
+            <div class="bar-container">
+                <span>0:25</span>
+                <div class="bar"></div>
+                <span>4:35</span>
+            </div>
         </div>
         <div class="col right">
-            colonna destra
+            <div class="icons-container">
+                <i class="fas fa-list"></i>
+                <i class="fas fa-desktop"></i>
+                <i class="fas fa-volume-up"></i>
+            </div>
+            <div class="bar"></div>
         </div>
     </footer>
 
