--- a/index.html
+++ b/index.html
@@ -227,16 +227,16 @@
                 <h4>Sinister</h4>
                 <span>Brano Nome</span>
             </div>
-            <div class="icons-container">
-                <i class="far fa-heart"></i>
-                <i class="far fa-folder"></i>
-            </div>
+            <ul class="icons-container">
+                <li><a href=""><a href=""><i class="far fa-heart"></a></i></li>
+                <li><a href=""><a href=""><i class="far fa-folder"></a></i></li>
+            </ul>
         </div>
         <div class="col-center">
             <div class="icons-container">
                 <a href=""><i class="fas fa-random"></i></a>
                 <a href=""><i class="fas fa-step-backward"></i></a>
-                <a href=""><i class="far fa-play-circle"></i></a>
+                <a href=""><i class="far fa-play-circle play"></i></a>
                 <a href=""><i class="fas fa-step-forward"></i></a>
                 <a href=""><i class="fas fa-undo"></i></a>
             </div>
@@ -248,9 +248,15 @@
         </div>
         <div class="col right">
             <div class="icons-container">
-                <i class="fas fa-list"></i>
-                <i class="fas fa-desktop"></i>
-                <i class="fas fa-volume-up"></i>
+                <a href="">
+                    <i class="fas fa-list"></i>
+                </a>
+                <a href="">
+                    <i class="fas fa-desktop"></i>
+                </a>
+                <a href="">
+                    <i class="fas fa-volume-up"></i>
+                </a>
             </div>
             <div class="bar"></div>
         </div>
