add overflow-y in sidebar

--- a/index.html
+++ b/index.html
@@ -46,23 +46,26 @@
                     </li>
                 </ul>
 
-                <ul class="playlist">
-                    <li>
+                <div class="playlist">
+                    <div class="title">
                         <h3>Playlist</h3>
-                    </li>
-                    <li>
+                    </div>
+                    <div class="icons-container">
                         <a href="">
                             <i class="fas fa-plus"></i>
                             <span>Crea Playlist</span>
                         </a>
-                    </li>
-                    <li><a href="">Nome Playlist</a></li>
-                    <li><a href="">Nome Playlist</a></li>
-                    <li><a href="">Nome Playlist</a></li>
-                    <li><a href="">Nome Playlist</a></li>
-                    <li><a href="">Nome Playlist</a></li>
-                    <li><a href="">Nome Playlist</a></li>
-                </ul>
+                    </div>
+                    <ul>
+                        <li><a href="">Nome Playlist</a></li>
+                        <li><a href="">Nome Playlist</a></li>
+                        <li><a href="">Nome Playlist</a></li>
+                        <li><a href="">Nome Playlist</a></li>
+                        <li><a href="">Nome Playlist</a></li>
+                        <li><a href="">Nome Playlist</a></li>
+                        <li><a href="">Nome Playlist</a></li>
+                    </ul>
+                </div>
             </div>
 
             <div class="menu-footer">
