flex replaced with float in the main structure

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 <body>
     
-    <main class="main">
-        <nav class="sidebar">
+    <main class="main clearfix">
+        <nav class="sidebar float-l">
             <div class="menu-list">
                 <ul>
                     <li class="logo-container">
@@ -84,7 +84,7 @@
             </div>
         </nav>
 
-        <div class="main-content">
+        <div class="main-content float-l">
             <div class="main-header">
                 <a href="">EFFETTUA L'UPGRADE</a>
             </div>
