--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
                     <div class="card">
                         <div class="img-container">
                             <img src="img/metal_lifting.jpg" alt="">
+                            <div class="overlay">
+                                <a href=""><i class="far fa-play-circle"></i></a>
+                            </div>
                         </div>
                         <div class="title">
                             <h3>Heavy Metal</h3>
@@ -116,6 +119,9 @@
                     <div class="card">
                         <div class="img-container">
                             <img src="img/stranger.jpeg" alt="">
+                            <div class="overlay">
+                                <a href=""><i class="far fa-play-circle"></i></a>
+                            </div>
                         </div>
                         <div class="title">
                             <h3>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
@@ -127,6 +133,9 @@
                     <div class="card">
                         <div class="img-container">
                             <img src="img/aquietplace.jpeg" alt="">
+                            <div class="overlay">
+                                <a href=""><i class="far fa-play-circle"></i></a>
+                            </div>
                         </div>
                         <div class="title">
                             <h3>A quiet place</h3>
@@ -136,6 +145,9 @@
                     <div class="card">
                         <div class="img-container">
                             <img src="img/split.jpeg" alt="">
+                            <div class="overlay">
+                                <a href=""><i class="far fa-play-circle"></i></a>
+                            </div>
                         </div>
                         <div class="title">
                             <h3>Split</h3>
@@ -145,6 +157,9 @@
                     <div class="card">
                         <div class="img-container">
                             <img src="img/cure.jpeg" alt="">
+                            <div class="overlay">
+                                <a href=""><i class="far fa-play-circle"></i></a>
+                            </div>
                         </div>
                         <div class="title">
                             <h3>A cure for wellness</h3>
@@ -154,6 +169,9 @@
                     <div class="card">
                         <div class="img-container">
                             <img src="img/sinister.jpeg" alt="">
+                            <div class="overlay">
+                                <a href=""><i class="far fa-play-circle"></i></a>
+                            </div>
                         </div>
                         <div class="title">
                             <h3>Sinister</h3>
@@ -171,6 +189,9 @@
                     <div class="card">
                         <div class="img-container">
                             <img src="img/radar.jpeg" alt="">
+                            <div class="overlay">
+                                <a href=""><i class="far fa-play-circle"></i></a>
+                            </div>
                         </div>
                         <div class="title">
                             <h3>Heavy Metal</h3>
@@ -180,6 +201,9 @@
                     <div class="card">
                         <div class="img-container">
                             <img src="img/mixdaily.jpeg" alt="">
+                            <div class="overlay">
+                                <a href=""><i class="far fa-play-circle"></i></a>
+                            </div>
                         </div>
                         <div class="title">
                             <h3>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
@@ -199,6 +223,9 @@
                     <div class="card">
                         <div class="img-container radius">
                             <img src="img/youg.jpeg" alt="">
+                            <div class="overlay">
+                                <a href=""><i class="far fa-play-circle"></i></a>
+                            </div>
                         </div>
                         <div class="title">
                             <h3>Heavy Metal</h3>
@@ -208,6 +235,9 @@
                     <div class="card">
                         <div class="img-container radius">
                             <img src="img/einaudi.jpeg" alt="">
+                            <div class="overlay">
+                                <a href=""><i class="far fa-play-circle"></i></a>
+                            </div>
                         </div>
                         <div class="title">
                             <h3>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
