--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify</title>
+    
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -275,7 +278,9 @@
             </div>
             <div class="bar-container">
                 <span>0:25</span>
-                <div class="bar"></div>
+                <div class="bar">
+                    <div class="point"></div>
+                </div>
                 <span>4:35</span>
             </div>
         </div>
@@ -291,7 +296,9 @@
                     <i class="fas fa-volume-up"></i>
                 </a>
             </div>
-            <div class="bar"></div>
+            <div class="bar">
+                <div class="point"></div>
+            </div>
         </div>
     </footer>
 
