--- a/index.html
+++ b/index.html
@@ -28,11 +28,17 @@
                         <a href="">
                             <img src="img/logo.svg" alt="">
                         </a>
+                        <a class="small-icon" href="">
+                            <img src="img/logo-small.svg" alt="">
+                        </a>
                     </li>
                     <li>
                         <a href="">
                             <i class="fas fa-home"></i>
                             <span>Home</span>
+                        </a>
+                        <a class="small-icon" href="">
+                            <img src="img/home.svg" alt="">
                         </a>
                     </li>
                     <li>
@@ -40,11 +46,17 @@
                             <i class="fas fa-search"></i>
                             <span>Cerca</span>
                         </a>
+                        <a class="small-icon" href="">
+                            <img src="img/search.svg" alt="">
+                        </a>
                     </li>
                     <li>
                         <a href="">
                             <i class="fas fa-bars"></i>
                             <span>La tua libreria</span>
+                        </a>
+                        <a class="small-icon" href="">
+                            <img src="img/libreria.svg" alt="">
                         </a>
                     </li>
                 </ul>
@@ -77,12 +89,18 @@
                         <i class="far fa-arrow-alt-circle-down"></i>
                         <span>Installa App</span>
                     </a>
+                    <a class="small-icon" href="">
+                        <img src="img/download.svg" alt="">
+                    </a>
                 </div>
                 <div class="account">
                     <a href="">
                         <i class="far fa-user-circle"></i>
                     </a>
                     <span>John Doe</span>
+                    <a class="small-icon" href="">
+                        <img src="img/profile.svg" alt="">
+                    </a>
                 </div>
             </div>
         </nav>
