sidebar-icons replaced with img-svg

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </li>
                     <li>
                         <a href="">
-                            <i class="fas fa-home"></i>
+                            <img src="img/home.svg" alt="">
                             <span>Home</span>
                         </a>
                         <a class="small-icon" href="">
@@ -43,7 +43,7 @@
                     </li>
                     <li>
                         <a href="">
-                            <i class="fas fa-search"></i>
+                            <img src="img/search.svg" alt="">
                             <span>Cerca</span>
                         </a>
                         <a class="small-icon" href="">
@@ -52,7 +52,7 @@
                     </li>
                     <li>
                         <a href="">
-                            <i class="fas fa-bars"></i>
+                            <img src="img/libreria.svg" alt="">
                             <span>La tua libreria</span>
                         </a>
                         <a class="small-icon" href="">
@@ -86,7 +86,7 @@
             <div class="menu-footer">
                 <div class="container">
                     <a href="">
-                        <i class="far fa-arrow-alt-circle-down"></i>
+                        <img src="img/download.svg" alt="">
                         <span>Installa App</span>
                     </a>
                     <a class="small-icon" href="">
@@ -95,7 +95,7 @@
                 </div>
                 <div class="account">
                     <a href="">
-                        <i class="far fa-user-circle"></i>
+                        <img src="img/profile.svg" alt="">
                     </a>
                     <span>John Doe</span>
                     <a class="small-icon" href="">
