--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
                     <span>Brano Nome</span>
                 </div>
                 <ul class="icons-container">
-                    <li><a href=""><a href=""><i class="far fa-heart"></i></a></li>
-                    <li><a href=""><a href=""><i class="far fa-folder"></i></a></li>
+                    <li><a href=""><i class="far fa-heart"></i></a></li>
+                    <li><a href=""><i class="far fa-folder"></i></a></li>
                 </ul>
             </div>
             <div class="col-center">
