--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <!-- WEBAPP-CONTAINER -->
     <div class="general-container">
+        <!-- MAIN_CLEARFIX-CONTAINER -->
         <main class="main clearfix">
+            <!-- LEFT_SIDEBAR-MENU -->
             <nav class="sidebar float-l">
+                <!-- SIDEBAR-TOP -->
                 <div class="menu-list">
                     <ul>
                         <li class="logo-container">
@@ -83,7 +86,9 @@
                         </ul>
                     </div>
                 </div>
+                <!-- /SIDEBAR-TOP -->
 
+                <!-- SIDEBAR-BOTTOM -->
                 <div class="menu-footer">
                     <div class="container">
                         <a href="">
@@ -104,12 +109,18 @@
                         </a>
                     </div>
                 </div>
+                <!-- /SIDEBAR-BOTTOM -->
             </nav>
+            <!-- /LEFT_SIDEBAR-MENU -->
 
+            <!-- RIGHT_MAIN-CONTENT -->
             <div class="main-content float-l">
+                <!-- MAIN-HEADER_'FIXED' -->
                 <div class="main-header">
                     <a href="">EFFETTUA L'UPGRADE</a>
                 </div>
+                <!-- /MAIN-HEADER_'FIXED' -->
+                <!-- CARDS-CONTAINER -->
                 <div class="cards-container">
                     <div class="menu">
                         <ul>
@@ -270,10 +281,15 @@
                         </div>
                     </div>
                 </div>
+                <!-- /CARDS-CONTAINER -->
             </div>
+            <!-- /RIGHT_MAIN-CONTENT -->
         </main>
+        <!-- /MAIN_CLEARFIX-CONTAINER -->
 
+        <!-- FOOTER -->
         <footer class="footer">
+            <!-- LEFT-COLUMN -->
             <div class="col left">
                 <div class="img-container">
                     <img src="img/sinister.jpeg" alt="">
@@ -287,6 +303,9 @@
                     <li><a href=""><i class="far fa-folder"></i></a></li>
                 </ul>
             </div>
+            <!-- /LEFT-COLUMN -->
+
+            <!-- CENTER-COLUMN -->
             <div class="col-center">
                 <div class="icons-container">
                     <a href=""><i class="fas fa-random"></i></a>
@@ -303,6 +322,9 @@
                     <span>4:35</span>
                 </div>
             </div>
+            <!-- /CENTER-COLUMN -->
+
+            <!-- RIGHT-COLUMN -->
             <div class="col right">
                 <div class="icons-container">
                     <a href="">
@@ -319,8 +341,11 @@
                     <div class="point"></div>
                 </div>
             </div>
+            <!-- /RIGHT-COLUMN -->
         </footer>
+        <!-- /FOOTER -->
     </div>
+    <!-- /WEBAPP-CONTAINER -->
 
 </body>
 </html>
